Fixing Case Progress SVG issues on Firefox

--- a/Packages/ohif-measurements/client/components/caseProgress/radialProgressBar/radialProgressBar.styl
+++ b/Packages/ohif-measurements/client/components/caseProgress/radialProgressBar/radialProgressBar.styl
@@ -20,29 +20,33 @@ $circleSize = 46px
     vendorize(transform, rotate(270deg))
     vendorize(transform-origin, center center)
 
-  .progressText
-    position: absolute
-    width: $circleSize
-    height: $circleSize
-    line-height: $circleSize
+  .progressArea
+    theme('color', '$activeColor')
+    display: table
     font-weight: 700
     font-size: 17px
-    text-align: center
-    theme('color', '$activeColor')
-    top: 0
+    height: $circleSize
+    line-height: $circleSize
+    left: 50%
+    position: absolute
+    top: 50%
+    transform(translate(-50%, -50%))
+    width: $circleSize
+
+    &.locked
+      line-height: 0
+
+      &, & svg
+        height: 21px
+        width: 16px
+
+    &.complete
+      line-height: 0
+
+      &, & svg
+        height: 27px
+        width: 27px
 
     svg
       theme('fill', '$activeColor')
-      left: 50%
-      position: absolute
       theme('stroke', '$activeColor')
-      top: 50%
-      transform(translateX(-50%) translateY(-50%))
-
-      &.locked
-        width: 16px
-        height: 21px
-
-      &.complete
-        width: 27px
-        height: 27px
